--- a/WPNest/WPNest/WPNest.csproj
+++ b/WPNest/WPNest/WPNest.csproj
@@ -123,7 +123,12 @@
       <DependentUpon>ErrorPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPage\IsEnabledFanModeConverter.cs" />
-    <Compile Include="MainPage\ThermostatTickCreator.cs" />
+    <Compile Include="MainPage\Thermostat\FanModeChangedArgs.cs" />
+    <Compile Include="MainPage\Thermostat\HvacModeChangedArgs.cs" />
+    <Compile Include="MainPage\Thermostat\IsAwayChangedArgs.cs" />
+    <Compile Include="MainPage\Thermostat\ThermostatSampleViewModel.cs" />
+    <Compile Include="MainPage\Thermostat\ThermostatTickCreator.cs" />
+    <Compile Include="MainPage\Thermostat\ThermostatViewModel.cs" />
     <Compile Include="Model\FanMode.cs" />
     <Compile Include="MainPage\FanModeToBoolConverter.cs" />
     <Compile Include="MainPage\FanModeToLabelConverter.cs" />
@@ -146,6 +151,7 @@
     </Compile>
     <Compile Include="MainPage\NestViewModel.cs" />
     <Compile Include="Model\TemperatureScale.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ServiceContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AnalyticsService.cs" />
@@ -182,7 +188,7 @@
     <Compile Include="Services\WebServiceError.cs" />
     <Compile Include="Services\WebServiceEventArgs.cs" />
     <Compile Include="Services\WebServiceResult.cs" />
-    <Compile Include="MainPage\ThermostatControl.xaml.cs">
+    <Compile Include="MainPage\Thermostat\ThermostatControl.xaml.cs">
       <DependentUpon>ThermostatControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPage\TrueToVisibleConverter.cs" />
@@ -222,7 +228,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainPage\ThermostatControl.xaml">
+    <Page Include="MainPage\Thermostat\ThermostatControl.xaml">
       <Generator>MSBuild:MarkupCompilePass1</Generator>
       <SubType>Designer</SubType>
     </Page>
