Implementing settings popover

--- a/WPNest/WPNest.Test/WPNest.Test.csproj
+++ b/WPNest/WPNest.Test/WPNest.Test.csproj
@@ -318,6 +318,8 @@
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Pin.png" />
+    <Content Include="Assets\Settings.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
