--- a/WPNest/WPNest.WP8/WPNest.WP8.csproj
+++ b/WPNest/WPNest.WP8/WPNest.WP8.csproj
@@ -124,6 +124,8 @@
     <Content Include="AppIconMedium.png" />
     <Content Include="AppIconSmall.png" />
     <Content Include="AppIconWide.png" />
+    <Content Include="Assets\Pin.png" />
+    <Content Include="Assets\Settings.png" />
     <Content Include="Properties\AppManifest.xml" />
     <Content Include="Properties\WMAppManifest.xml" />
     <Content Include="SplashScreenImage.jpg" />
