Refactoring NestViewModel state into single property

--- a/WPNest/WPNest.WP8/WPNest.WP8.csproj
+++ b/WPNest/WPNest.WP8/WPNest.WP8.csproj
@@ -188,6 +188,9 @@
     <Compile Include="..\WPNest\MainPage\NestViewModel.cs">
       <Link>MainPage\NestViewModel.cs</Link>
     </Compile>
+    <Compile Include="..\WPNest\MainPage\NestViewModelState.cs">
+      <Link>MainPage\NestViewModelState.cs</Link>
+    </Compile>
     <Compile Include="..\WPNest\MainPage\ThermostatControl.xaml.cs">
       <Link>MainPage\ThermostatControl.xaml.cs</Link>
     </Compile>
